2025-02-02  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-mini.ch: Avoid several 'Overfull \vbox'es.

2025-01-29  Andreas Scherer  <https://ascherer.github.io>

	* tests/ham.ch: Add line information.

2025-01-15  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-mini.ch: Don't mess with /PageLabels in CTWILL output.

2025-01-14  Andreas Scherer  <https://ascherer.github.io>

	* texinputs/pdfctwimac.tex: Switch on PDF outlines.

2025-01-11  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-proofsort: Support multiple definitions of identifiers.

2025-01-01  Andreas Scherer  <https://ascherer.github.io>

	* Makefile,
	* comm-{mac,mini,ql,w2c}.ch,
	* comm-w2c.h,
	* common.h,
	* common.w,
	* ctang-{bs,pc,ql,vms,w2c,w32}.ch,
	* ctangle.c,
	* ctangle.w,
	* ctwill-w2c.ch,
	* cweav-{bs,pc,ql,vms,w2c,w32}.ch,
	* cweave.w,
	* cwebacromac.tex,
	* cwebmac.tex,
	* cwebman-w2c.ch,
	* cwebman.tex,
	* po/cweb-tl.pot,
	* po/cweb.pot,
	* po/de/cweb-tl.po,
	* po/de/cweb.po,
	* po/de/web2c-help.po,
	* po/it/cweb.po,
	* po/web2c-help.pot,
	* prod-{cweave,twill}.w,
	* prod.w: CWEB 4.12.1 release.

2024-12-31  Andreas Scherer  <https://ascherer.github.io>

	* texinputs/pdfctwimac.tex: Append 'Names of the sections'.

2024-12-27  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-mini.ch,
	* ctwimac.tex,
	* texinputs/pdfctwimac.tex: Rename page dimensions.

2024-11-20  Andreas Scherer  <https://ascherer.github.io>

	* cwebman-w2c.ch: Link to extended WEB manual in TeX Live.

2024-11-01  Andreas Scherer  <https://ascherer.github.io>

	* cwebacromac.tex: Purge spurious space(s).

2024-10-06  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-mini.ch: Fix line/paragraph break.

2024-09-14  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-mini.ch,
	* ctwill-w2c.ch,
	* cweav-w2c.ch,
	* cweave.w,
	* cwebacromac.tex,
	* cwebmac.tex,
	* refsort.ch: Fix sorting order in Names-of-the-Sections.

2024-08-12  Andreas Scherer  <https://ascherer.github.io>
