@@ -12,7 +12,7 @@ in my paper ``Mini-indexes for literate programs,'' {\sl Software---Concepts
 and Tools\/ \bf15} (1994), 2--11.] The input graph should be in
 Stanford GraphBase format, and should be named on the command line
 as, for example, \.{foo.gb}. An optional second command-line parameter
-is a modulus \PB{\|m}, which causes every $m$th solution to be printed.
+is a modulus~$m$, which causes every $m$th solution to be printed.
 
 We use a utility field to record the vertex degrees.
 
@@ -65,7 +65,6 @@ ${}\\{printf}(\.{"\ \%ld"},\39\|v\MG\\{deg});{}$\2\6
 \]{GB\_\,GRAPH}9 \\{arcs} \&{Arc} ${}{*}{}$
 \]{GB\_\,GRAPH}20 \&{Graph} =\&{struct}
 \]{GB\_\,GRAPH}8 \|{I} \&{long}
-\]{GB\_\,GRAPH}20 \|{m} \&{long}
 \]{GB\_\,GRAPH}20 \|{n} \&{long}
 \]{GB\_\,GRAPH}9 \\{name} \&{char} ${}{*}{}$
 \]{GB\_\,GRAPH}10 \\{next} \&{Arc} ${}{*}{}$
