@@ -1,3 +1,11 @@
+2025-02-26  Andreas Scherer  <https://ascherer.github.io>
+
+	* tests/ham-sorted.tex,
+	* tests/ham.ch,
+	* tests/ham.ref,
+	* tests/ham.sref,
+	* tests/ham.tex: Command-line option 'm' is no SGB variable.
+
 2025-02-02  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctwill-mini.ch: Avoid several 'Overfull \vbox'es.
